Fix bugs(pagination visible) the pagination

--- a/client/src/components/sort/Button.module.scss
+++ b/client/src/components/sort/Button.module.scss
@@ -10,6 +10,9 @@
     p{
         margin: 10px 15px;
     }
+    &.active{
+        background: $gray-bright;
+    }
 }
 
 .btn:hover{
